# windows-rs

./: CLAUDE.md  Cargo.toml  build_errors.txt  windows-rs.sln
.claude/: settings.local.json
.claude/agents/: 01-overview.md  02-architecture.md  03-modules.md  04-usage-guide.md  05-design-principles.md  06-code-generation.md  README.md  failover-cluster.md  hyper-v.md
.claude/agents/failover_cluster/: 01-overview.md  02-cluster-management.md  03-node-management.md  04-group-management.md  05-resource-management.md  06-networking.md  07-notifications.md  08-storage.md  09-api-reference.md  README.md
.claude/agents/hyper-v/: 01-overview.md  02-partition-management.md  03-virtual-processors.md  04-memory-management.md  05-device-virtualization.md  06-interrupts-events.md  (+3 more)
crates/libs/hyperv/: Cargo.standalone.toml  Cargo.toml  Cargo.toml.bak  readme.md
crates/libs/hyperv/examples/: add_network.rs  attach_disk.rs  checkpoints.rs  create_vhd.rs  create_vm.rs  delete_vm.rs  full_vm_setup.rs  list_switches.rs  list_vms.rs  manage_switch.rs  mount_iso.rs  vm_power.rs
crates/libs/hyperv/src/: error.rs  hyperv.rs  lib.rs
crates/libs/hyperv/src/checkpoint/: mod.rs
crates/libs/hyperv/src/network/: adapter.rs  mod.rs  physical_adapter.rs  switch.rs
crates/libs/hyperv/src/storage/: controller.rs  mod.rs  vhd.rs
crates/libs/hyperv/src/vm/: computer_system.rs  mod.rs  settings.rs  state.rs  types.rs
crates/libs/hyperv/src/wmi/: connection.rs  mod.rs  variant.rs
crates/libs/hyperv/tests/: checkpoint.rs  connection.rs  full_setup.rs  network_adapter.rs  storage.rs  vhd.rs  virtual_switch.rs  vm_lifecycle.rs  vm_power.rs
crates/libs/hyperv/tests/common/: mod.rs
